--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,4 +1,6 @@
 .DS_Store
+node_modules/
+/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -10,5 +12,5 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
-node_modules/
-/dist/
+
+package-lock.json
